--- a/pacman/index.html
+++ b/pacman/index.html
@@ -15,6 +15,7 @@
 			body {
 				font-family: gamefont;
 				color: white;
+				background-color: black;
 			}
 
 			#title {
@@ -23,11 +24,37 @@
 				color: yellow;
 
 				position: absolute;
-				top: 5%;
+				top: 8%;
 				left: 20%;
 				right: 20%;
 				text-align-last: center;	
 				margin: 0;
+			}
+			
+			ul {
+				list-style-type: none;
+			}
+			
+			.scores-background {
+				background-color: rgba(0, 0, 0, 0.6);
+				border: 2px solid yellow;
+	            border-radius: 8px;
+			}
+			
+			ol#scores-list {
+				padding-left: 4em;
+	            padding-block: 1.5em;
+	
+	            max-height: 10em;
+	            overflow-y: hidden;
+			}
+			
+			ol#scores-list.animated li:first-of-type {
+				animation-name: rainbowText;
+				animation-delay: 0;
+				animation-duration: 1s;
+				animation-iteration-count: infinite;
+				animation-timing-function: linear;
 			}
 			
 			#title.animated {
@@ -42,7 +69,7 @@
 
 			.menu {
 				position:absolute;
-				top: 20%;
+				top: 30%;
 				left: 20%;
 				right: 20%;
 				bottom: 20%;
@@ -53,6 +80,10 @@
 
 				color: yellow;
 			}
+			
+			.menu h2 {
+                font-size: 22px;
+            }
 
 			.list-4>li {
 				position: relative;
@@ -70,11 +101,41 @@
 			}
 
 			.bar {
-				background-color: black;
-				padding: 0.5em;
-			    left: 10%;
-			    right: 10%;
-				justify-content: center;
+                margin-inline: auto;
+                height: 2em;
+                width: 75%;
+			
+				display: grid;
+				grid-template-columns: 1fr auto 1fr;
+			}
+			
+			.bar-value {
+				text-wrap: none;
+			}
+			
+            .bar-value>* {
+                margin-left: 8px;
+            }
+			
+			#current-score {
+				grid-column: 1 / 2;
+				grid-row: 1;
+			}
+			
+			#high-score {
+                grid-column: 3 / 4;
+                grid-row: 1;
+                justify-self: right;
+			}
+			
+			#lives {
+				grid-column: 1 / 2;
+				grid-row: 1;
+			}
+			
+			#fruits {
+                grid-column: 3 / 4;
+                grid-row: 1;
 			}
 
 			#container {
@@ -139,7 +200,7 @@
 				}
 
 				to {
-					top: 5%;
+					top: 8%;
 				}
 			}
 
@@ -152,14 +213,61 @@
 					opacity: 100%;
 				}
 			}
+			
+			@keyframes rainbowText {
+				0% {
+					color: pink;
+				}
+				
+		        10% {
+			        color: red;
+	            }
+	
+	            20% {
+			        color:orange;
+	            }
+	
+	            30% {
+			        color:yellow;
+	            }
+	
+	            40% {
+			        color:green;
+	            }
+	
+	            50% {
+			        color:blue;
+	            }
+	
+	            60% {
+			        color: purple;
+	            }
+	
+	            70% {
+			        color: indigo;
+	            }
+	
+	            80% {
+			        color:violet;
+	            }
+	
+	            90% {
+		            color: grey;
+		        }
+
+				100% {
+					color: white;
+				}
+			}
 		</style>
 		<link rel="icon" href="./icon.svg">
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/zingtouch/1.0.6/zingtouch.min.js" integrity="sha512-HmaXasRYOQJEXJWYwYCMcIA/XnPtW9WPvaBVWE2mQP6K31sRdcgaYUyB//P5540J4hFqMBcj6vkDEEGkwHkYdA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	</head>
 	<body>
 		<div id="container">
 			<div class="bar">
-				<div id="current-score">Score<span id="current-score-value">0</span></div>
-				<div id="hi-score">Hi-score<span id="hi-score-value">0</span></div>
+				<div id="current-score" class="bar-value">Score<span id="current-score-value">0</span></div>
+				<div id="high-score" class="bar-value">Hi-score<span id="hi-score-value">0</span></div>
 			</div>
 			<h1 id="title" class="animated">Pac Man</h1>
 			<div id="main-menu" class="animated menu">
@@ -168,9 +276,11 @@
 				<button id="controls-button">Controls</button>
 			</div>
 			<div id="scores" class="menu">
-				<ol id="scores-list" class="list-10">
-					<li>Hi-score<span>0</span></li>
-				</ol>
+				<h2 id="scores-header">Today's hi-scores</h2>
+				<div class="scores-background">
+				    <ol id="scores-list" class="list-10 animated"></ol>
+				</div>
+				<button id="scores-mode-button">Show all</button>
 				<button id="scores-back-button">Back</button>
 			</div>
 			<div id="controls" class="menu">
@@ -186,20 +296,17 @@
 			</div>
 			<canvas id="game"></canvas>
 			<div class="bar">
-				<div id="lives">
-					<img id="life-3" href="./icon.svg"/>
-					<img id="life-2" href="./icon.svg"/>
-					<img id="life-1" href="./icon.svg"/>
-				</div>
-				<div id="fruits"></div>
+				<div id="lives" class="bar-value"></div>
+				<div id="fruits" class="bar-value"></div>
 			</div>
 		</div>
 
 		<script src="./map-data.js"></script>
 		<script src="./parse-map.js"></script>
 		<script src="./graphics.js"></script>
-		<!-- <script src="./pathfinding.js"></script> -->
+		<script src="./pathfinding.js"></script>
 		<script src="./game.js"></script>
+		<script src="./scores.js"></script>
 		<script src="./index.js"></script>
 	</body>
 </html>
